# ML-Experiment-Tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
scripts/: plot_accuracy.py
src/mltracker/: __init__.py  cli.py
tests/: test_cli.py
