[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-experiment-tracker"
version = "0.1.0"
description = "ML Experiment Tracker"
requires-python = ">=3.9"

[project.scripts]
mltracker = "mltracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
